tests/ui/unknown_attribute.stderr
error: Unknown option for #[arbitrary]: `unknown_attr`
 --> tests/ui/unknown_attribute.rs:5:17
  |
5 |     #[arbitrary(unknown_attr)]
  |                 ^^^^^^^^^^^^
